--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .nav-btn {
+        @apply px-4 py-2 bg-slate-600 hover:bg-slate-500 transition-all  text-white rounded-md text-sm font-medium;
+    }
+}
