--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -6,4 +6,8 @@
     .nav-btn {
         @apply px-4 py-2 bg-slate-600 hover:bg-slate-500 transition-all  text-white rounded-md text-sm font-medium;
     }
+
+    .navbar {
+        @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
+    }
 }
