--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -15,6 +15,10 @@
         @apply mr-10 py-6 px-6 hover:bg-gray-600 rounded-lg transition-all;
     }
 
+    .nav-control-button {
+        @apply mr-10 font-['Poppins'];
+    }
+
     @media (max-width: 768px) {
         .navbar {
             @apply max-w-xs;
@@ -22,6 +26,10 @@
 
         .das-nav-btn {
             @apply mr-4 py-3 px-3 rounded-md inline-block;
+        }
+
+        .list {
+            @apply p-20;
         }
     }
 }
